# cwdaemon

./: .gitignore  CMakeLists.txt  baseline_decode.txt  baseline_diag.txt  baseline_loopback_2_decode.txt  baseline_loopback_2_diag.txt  baseline_loopback_3_decode.txt  baseline_loopback_3_diag.txt  baseline_loopback_5_decode.txt  baseline_loopback_6_decode.txt  baseline_loopback_decode.txt  baseline_loopback_diag.txt  baseline_sample_1_decode.txt  baseline_sample_2_decode.txt  baseline_sample_3_decode.txt  baseline_sample_4_decode.txt  cq_capture_decode.txt  cq_capture_expected.txt  exchange_capture_decode.txt  exchange_capture_expected.txt  slow_cw_test_2_decode.txt  slow_cw_test_decode.txt  vcpkg.json
docs/: fldigi_mapping.md
scripts/: fetch_w1aw.py  run_benchmarks.sh
src/: api.cpp  audio.cpp  config.cpp  goertzel.cpp  main.cpp  rigctl.cpp  timing.cpp  tui.cpp  wavfile.cpp
src/include/: api.hpp  audio.hpp  config.hpp  goertzel.hpp  rigctl.hpp  ringbuffer.hpp  timing.hpp  tui.hpp  wavfile.hpp
testdata/: manifest.json  w1aw_arlp019.txt
tools/: cwdiag.cpp  gentone.cpp
